<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="43dp"
        android:text="@string/buttonOk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupProducts" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="3dp"
        android:text="@string/companyTitles"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupCompanies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/productTitles2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="80dp"
        android:text="@string/productTitles"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupProducts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/radioGroupProducts"
        android:layout_width="133dp"
        android:layout_height="218dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="354dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroupCompanies">

        <RadioButton
            android:id="@+id/radioButtonProduct1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productTitle1" />

        <RadioButton
            android:id="@+id/radioButtonProduct2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productTitle2" />

        <RadioButton
            android:id="@+id/radioButtonProduct3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productTitle3" />

        <RadioButton
            android:id="@+id/radioButtonProduct4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productTitle4" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupCompanies"
        android:layout_width="102dp"
        android:layout_height="170dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioGroupProducts"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButtonCompany1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="0dp"
            android:text="@string/companyTitle1" />

        <RadioButton
            android:id="@+id/radioButtonCompany2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="0dp"
            android:text="@string/companyTitle2" />

        <RadioButton
            android:id="@+id/radioButtonCompany3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="7dp"
            android:text="@string/companyTitle3" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>